Modified ProcessWorker constructor to use pipeline runner and fixed tests
Signed-off-by: Mohammed Aghil Puthiyottil <57040494+MohammedAghil@users.noreply.github.com>